dataset1235/2025-2/1153765216/users/1752965911/executions/3138746197_3530285078.log
== RUN (2025-08-14 19:13:34)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na inglaterra."
print(string.???)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:14:10)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.???)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:14:51)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace,nasceu em 1815, na Inglaterra."
print(string.???)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:14:05)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.???)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:16:45)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string..lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:16:59)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:14:06)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.???)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:16:44)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string..lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:16:58)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
